--- a/historia.html
+++ b/historia.html
@@ -10,6 +10,8 @@
       href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
       rel="stylesheet"
     />
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <!--Mando llamar hoja de estilos-->
     <link rel="stylesheet" href="css/estilos.css" />
     <title>Out of this WORLD...</title>
@@ -18,7 +20,7 @@
     <main>
       <div id="grillaContenido">
         <header class="border">
-          <h1>
+          <h1 class="animate__animated animate__bounce">
             <a href="index.html"
               >Out of this WORLD.......{exploración espacial}</a
             >
