--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
       href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
       rel="stylesheet"
     />
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+
     <!--Mando llamar hoja de estilos-->
     <link rel="stylesheet" href="css/estilos.css" />
     <title>Out of this WORLD...</title>
@@ -18,11 +21,11 @@
   <body>
     <main>
       <div id="grilla">
-        <header class="border"><h1><a href=index.html>Out of this WORLD.......{exploración espacial}</a></h1></header>
-        <section id="historia" class="border"><a href=historia.html>Historia de la exploración espacial</a></section>
-        <section id="noticias" class="border"><a href="noticias.html">Noticias</a></section>
+        <header class="border"><h1 class="animate__animated animate__bounce"><a href=index.html>Out of this WORLD.......{exploración espacial}</a></h1></header>
+        <section id="historia" class="border"><a href=historia.html><h2>Historia de la exploración espacial</h2></a></section>
+        <section id="noticias" class="border"><a href="noticias.html"><h2>Noticias</h2></a></section>
         
-        <aside class="border"><a href="telescopio.html">Telescopio James Webb</a></aside>
+        <aside class="border"><a href="telescopio.html"><h2>Telescopio James Webb</h2></a></aside>
         <footer class="border"><img alt="tt" src="img/sm.jpg"></footer>
         
       </div>
