Actualización segunda entrega proyecto final

--- a/historia.html
+++ b/historia.html
@@ -28,49 +28,58 @@
 </head>
 
 <body>
-  <header class="container-fluid border border-klight bg-secondary bg-opacity-50">
+  <header class="container-fluid border border-light bg-secondary bg-opacity-50">
     <nav class="navbar navbar-expand-lg navbar-light">
       <div class="container-fluid" style="border: 20%;">
-        <a class="navbar-brand fs-1 text-wrap" href="index.html" aria-current="true">
+        <a class="navbar-brand  text-wrap" href="index.html" aria-current="true">
           <img src="img/logo.png" alt="logo_space" width="70" height="50" />
-          OUT OF THIS WORLD...{exploración espacial}
+          OFTW
         </a>
-        <!--
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>-->
-        <!--
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="index.html">OUT OF THIS WORLD...{exploración espacial}</a>
-              </li>
 
-            </ul>
-          </div>-->
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link fw-bold" aria-current="page" href="historia.html">Historia</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link fw-bold" aria-current="page" href="noticias.html">Noticias</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link fw-bold" aria-current="page" href="telescopio.html">Telescopio James Webb</a>
+            </li>
+          </ul>
+        </div>
       </div>
     </nav>
   </header>
   <main class="container-fluid">
-    <div class="row justify-content-center border border-light">
-      <div class="col-12 col-sd-6 col-lg-4 p-3 border bg-warning bg-gradient bg-opacity-75">
+    <div class="row border border-light ">
+      <div class="col-12 col-md-12 col-lg-12 p-5 pt-0 pb-0 border bg-warning bg-gradient bg-opacity-75">
+        <p class="text-justify">
         <h2>
           Historia de la exploración espacial
         </h2>
-        <p>
+        El Universo siempre ha fascinado a los seres humanos, que desde la Antigüedad soñaban con alcanzar mundos
+        diferentes al suyo. Algunos escritores y cineastas del siglo XIX y principios del XX como Julio Verne y George
+        Méliès abordaron el tema de la exploración espacial, pero no fue hasta mediados del siglo XX que este sueño se
+        materializó.
+        <br> <br>
+        <h2>Los pioneros: padres de la Astronáutica</h2>
 
-          El Universo siempre ha fascinado a los seres humanos, que desde la Antigüedad soñaban con alcanzar mundos
-          diferentes al suyo. Algunos escritores y cineastas del siglo XIX y principios del XX como Julio Verne y George
-          Méliès abordaron el tema de la exploración espacial, pero no fue hasta mediados del siglo XX que este sueño se
-          materializó. Fuente: <a href="https://www.geoenciclopedia.com/exploracion-espacial/"
-            target="_blank">GeoEnciclopedia</a>
-          <br>
+        La exploración espacial es, tal como se puede inferir, la búsqueda por el espacio exterior, fuera del planeta
+        Tierra, que induce al descubrimiento científico gracias al avance tecnológico. El aparato comúnmente asociado
+        con esta actividad es el cohete espacial, que consiste en un cilindro abierto en uno de los extremos y relleno
+        de un combustible. Sin embargo, los cohetes son solo una parte de las naves espaciales, y existen muchos otros
+        sofisticados aparatos diseñados para la exploración espacial como las sondas, los satélites, los misiles,
+        etcétera. Ahora bien, una nave espacial es todo vehículo especialmente diseñado para el vuelo en el espacio
+        exterior, entendiendo este como el vacío existente entre los astros o cuerpos celestes.
 
-          <a href="historia.html"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-              class="bi bi-arrow-right-circle" viewBox="0 0 16 16">
-              <path fill-rule="evenodd"
-                d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8zm15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM4.5 7.5a.5.5 0 0 0 0 1h5.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5H4.5z" />
-            </svg> Ver más</a>
+        <br><br>Fuente: <a href="https://www.geoenciclopedia.com/exploracion-espacial/" target="_blank">GeoEnciclopedia</a>
         </p>
       </div>
 
@@ -84,4 +93,3 @@
 </body>
 
 </html>
-
