--- a/index.html
+++ b/index.html
@@ -53,53 +53,54 @@
   </header>
   <main class="container-fluid">
     <div class="row justify-content-center border border-light">
-      <div class="col-12 col-sd-6 col-lg-4 p-3 border bg-warning bg-gradient bg-opacity-75">
+      <div class="col-12 col-sd-6 col-lg-4 p-3 pt-0 pb-0 border bg-warning bg-gradient bg-opacity-75">
+<a href="historia.html">
+        <p>
         <h2>
           Historia de la exploración espacial
         </h2>
-        <p>
+        El Universo siempre ha fascinado a los seres humanos, que desde la Antigüedad soñaban con alcanzar mundos
+        diferentes al suyo. Algunos escritores y cineastas del siglo XIX y principios del XX como Julio Verne y George
+        Méliès abordaron el tema de la exploración espacial, pero no fue hasta mediados del siglo XX que este sueño se
+        materializó. Fuente: <a href="https://www.geoenciclopedia.com/exploracion-espacial/"
+          target="_blank">GeoEnciclopedia</a>
+        <br></a>
 
-          El Universo siempre ha fascinado a los seres humanos, que desde la Antigüedad soñaban con alcanzar mundos
-          diferentes al suyo. Algunos escritores y cineastas del siglo XIX y principios del XX como Julio Verne y George
-          Méliès abordaron el tema de la exploración espacial, pero no fue hasta mediados del siglo XX que este sueño se
-          materializó. Fuente: <a href="https://www.geoenciclopedia.com/exploracion-espacial/"
-            target="_blank">GeoEnciclopedia</a>
-          <br>
 
-          <a href="historia.html"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-              class="bi bi-arrow-right-circle" viewBox="0 0 16 16">
-              <path fill-rule="evenodd"
-                d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8zm15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM4.5 7.5a.5.5 0 0 0 0 1h5.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5H4.5z" />
-            </svg> Ver más</a>
         </p>
       </div>
-      <div class="col-12 col-lg-4 p-3 border bg-warning bg-gradient bg-opacity-75">
+      <div class="col-12 col-lg-4 p-3 pt-0 pb-0 border bg-warning bg-gradient bg-opacity-75">
+        <a href="historia.html">
+        <p>
         <h2>
           Noticias
         </h2>
-        <p>
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit dolorum libero ea culpa tempora. Voluptatum
-          totam laborum voluptas alias deleniti.
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reiciendis, et fuga accusantium quod officiis ad,
-          totam architecto pariatur consectetur ducimus minima sunt consequuntur nesciunt quo? Doloremque aut laboriosam
-          vero cupiditate!
-        </p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit dolorum libero ea culpa tempora. Voluptatum
+        totam laborum voluptas alias deleniti.
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reiciendis, et fuga accusantium quod officiis ad,
+        totam architecto pariatur consectetur ducimus minima sunt consequuntur nesciunt quo? Doloremque aut laboriosam
+        vero cupiditate!
+        </p></a>
       </div>
-      <div class="col-12 col-lg-4 p-3 border bg-warning bg-gradient  bg-gradient bg-opacity-75">
+      <div class="col-12 col-lg-4 p-3 pt-0 pb-0 border bg-warning bg-gradient  bg-gradient bg-opacity-75">
+        <a href="historia.html">
+        <p>
         <h2>
           Telescopio espacial James Webb
-        </h2>
-  <p>The James Webb Space Telescope is the world’s largest, most powerful, and most complex space science telescope ever built. Webb will solve mysteries in our solar system, look beyond to distant worlds around other stars, and probe the mysterious structures and origins of our universe and our place in it. Webb is an international program led by NASA with its partners, ESA (European Space Agency) and the Canadian Space Agency. Fuente: <a href="https://blogs.nasa.gov/webb/"
-    target="_blank">James Webb Space Telescope</a>
-  <br>
+        </h2>The James Webb Space Telescope is the world’s largest, most powerful, and most complex space science
+        telescope ever built. Webb will solve mysteries in our solar system, look beyond to distant worlds around other
+        stars, and probe the mysterious structures and origins of our universe and our place in it. Webb is an
+        international program led by NASA with its partners, ESA (European Space Agency) and the Canadian Space Agency.
+        Fuente: <a href="https://blogs.nasa.gov/webb/" target="_blank">James Webb Space Telescope</a>
+        <br>
+      </a>
+        <a href="https://blogs.nasa.gov/webb/"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+            fill="currentColor" class="bi bi-arrow-right-circle" viewBox="0 0 16 16">
+            <path fill-rule="evenodd"
+              d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8zm15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM4.5 7.5a.5.5 0 0 0 0 1h5.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5H4.5z" />
+          </svg> Ver más</a></p>
 
-  <a href="https://blogs.nasa.gov/webb/"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-      class="bi bi-arrow-right-circle" viewBox="0 0 16 16">
-      <path fill-rule="evenodd"
-        d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8zm15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM4.5 7.5a.5.5 0 0 0 0 1h5.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5H4.5z" />
-    </svg> Ver más</a></p>
-       
-        
+
       </div>
       <div class="col-12 border bg-secondary bg-opacity-50">
 
@@ -111,4 +112,3 @@
 </body>
 
 </html>
-
