Actualización parcial entrega SASII y SEO

--- a/historia.html
+++ b/historia.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Este es un sitio con noticias y contenido acerca de la exploración espacial">
+  <meta name="keywords" content="espacio, exploración, sol, luna, sistema solar, cohete, nave espacial, sonda, astronauta, NASA, estación espacial internacional, space, exploration, historia, noticias, telescopio, moon, sun, stars, estrellas">
   <!--Realizo conexion para fuentes-Google Fonts-->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -24,7 +26,7 @@
   <!--Mando llamar mis hojas de estilos-->
   <link rel="stylesheet" href="css/estilos.css" />
   <link rel="icon" type="image/x-icon" href="img/favicon.ico">
-  <title>OFTW</title>
+  <title>OFTW-Historia exploración espacial</title>
 </head>
 
 <body>
