--- a/noticias.html
+++ b/noticias.html
@@ -3,6 +3,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Este es un sitio con noticias y contenido acerca de la exploración espacial">
+    <meta name="keywords" content="espacio, exploración, sol, luna, sistema solar, cohete, nave espacial, sonda, astronauta, NASA, estación espacial internacional, space, exploration, historia, noticias, telescopio, moon, sun, stars, estrellas">
     <!--Realizo conexion para fuentes-Google Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -14,7 +16,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <!--Mando llamar hoja de estilos-->
     <link rel="stylesheet" href="css/estilos.css" />
-    <title>Out of this WORLD...</title>
+    <title>OFTW-Noticias de exploración espacial</title>
   </head>
   <body>
     <main>
