Actualización SASSII y SEO

--- a/historia.html
+++ b/historia.html
@@ -63,7 +63,7 @@
     <div class="row border border-light ">
       <div class="col-12 col-md-12 col-lg-12 p-5 pt-0 pb-0 border bg-warning bg-gradient bg-opacity-75">
         <p class="text-justify">
-        <h2>
+        <h2 class="h2_principal">
           Historia de la exploración espacial
         </h2>
         El Universo siempre ha fascinado a los seres humanos, que desde la Antigüedad soñaban con alcanzar mundos
@@ -71,7 +71,7 @@
         Méliès abordaron el tema de la exploración espacial, pero no fue hasta mediados del siglo XX que este sueño se
         materializó.
         <br> <br>
-        <h2>Los pioneros: padres de la Astronáutica</h2>
+        <h2 class="h2_principal">Los pioneros: padres de la Astronáutica</h2>
 
         La exploración espacial es, tal como se puede inferir, la búsqueda por el espacio exterior, fuera del planeta
         Tierra, que induce al descubrimiento científico gracias al avance tecnológico. El aparato comúnmente asociado
