--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </head>
 
 <body>
-  <header class="container-fluid border border-klight bg-secondary bg-opacity-50">
+  <header class="container-fluid border border-light bg-secondary bg-opacity-50">
     <nav class="navbar navbar-expand-lg navbar-light">
       <div class="container-fluid" style="border: 20%;">
         <a class="navbar-brand fs-1 text-wrap" href="index.html" aria-current="true">
@@ -58,7 +58,7 @@
       <div class="col-12 col-sd-6 col-lg-4 p-3 pt-0 pb-0 border bg-warning bg-gradient bg-opacity-75">
 <a href="historia.html">
         <p>
-        <h2>
+        <h2 class="h2_principal">
           Historia de la exploración espacial
         </h2>
         El Universo siempre ha fascinado a los seres humanos, que desde la Antigüedad soñaban con alcanzar mundos
@@ -74,7 +74,7 @@
       <div class="col-12 col-lg-4 p-3 pt-0 pb-0 border bg-warning bg-gradient bg-opacity-75">
         <a href="historia.html">
         <p>
-        <h2>
+        <h2 class="h2_principal">
           Noticias
         </h2>
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit dolorum libero ea culpa tempora. Voluptatum
@@ -87,7 +87,7 @@
       <div class="col-12 col-lg-4 p-3 pt-0 pb-0 border bg-warning bg-gradient  bg-gradient bg-opacity-75">
         <a href="historia.html">
         <p>
-        <h2>
+        <h2 class="h2_principal">
           Telescopio espacial James Webb
         </h2>The James Webb Space Telescope is the world’s largest, most powerful, and most complex space science
         telescope ever built. Webb will solve mysteries in our solar system, look beyond to distant worlds around other
