--- a/noticias.html
+++ b/noticias.html
@@ -29,7 +29,7 @@
           </h1>
         </header>
         <section id="historiaContenido" class="border">
-          <h2>Noticias</h2>
+          <h2 class="h2_principal">Noticias</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum
             accusantium eaque esse ratione, magnam, animi, sapiente et cumque
