--- a/telescopio.html
+++ b/telescopio.html
@@ -29,7 +29,7 @@
           </h1>
         </header>
         <section id="historiaContenido" class="border">
-          <h2>Ver Telescopio James Webb</h2>
+          <h2 class="h2_principal">Ver Telescopio James Webb</h2>
           <iframe width="350" height="300" src="https://www.youtube.com/embed/7nT7JGZMbtM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </section>
 
